@@ -51,6 +51,7 @@
 	  - Fix security bug in options handler (reported by Matthew Daley,
 	    fixed by Pasi Kallinen)
 	  - Honor pickup_burden when picking up gold.
+	  - Fix TTY crashing when a location has more than 32k items (from NAO)
 
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
